@@ -5,6 +5,7 @@
   Copyright 2007-2008 Y Giridhar Appaji Nag
   Copyright 2008      Philipp Hagemeister
   Copyright 2015      Joao Eriberto Mota Filho
+  Copyright 2016      Sjjad Hashemian
   Copyright 2016      Stephen Thirlwall
 
   This program is free software; you can redistribute it and/or
