@@ -3,6 +3,7 @@
 
   Copyright 2001-2007 Wilmer van der Gaast
   Copyright 2008      Y Giridhar Appaji Nag
+  Copyright 2016      Sjjad Hashemian
   Copyright 2016      Stephen Thirlwall
 
   This program is free software; you can redistribute it and/or
